--- a/index.html
+++ b/index.html
@@ -4,89 +4,145 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ticha Africa – AI for African Teachers</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      color: #222;
-      background-color: #f9f9f9;
-    }
-    header {
-      background: #004d40;
-      color: #fff;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-    }
-    header p {
-      max-width: 700px;
-      margin: 0 auto 20px;
-    }
-    header a.cta {
-      display: inline-block;
-      background: #ffb300;
-      color: #000;
-      padding: 12px 24px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    section h2 {
-      color: #004d40;
-      margin-bottom: 15px;
-      font-size: 1.5rem;
-    }
-    .values-list, .vision-list, .mission-list {
-      list-style: none;
-      padding: 0;
-    }
-    .values-list li, .vision-list li, .mission-list li {
-      background: #fff;
-      margin: 10px 0;
-      padding: 15px;
-      border-radius: 6px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    footer {
-      background: #004d40;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-    footer p {
-      margin: 0;
-    }
-    .newsletter {
-      background: #fff8e1;
-      padding: 20px;
-      border-radius: 6px;
-      margin-top: 20px;
-    }
-    .newsletter input[type="email"] {
-      width: 70%;
-      padding: 10px;
-      margin-right: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    .newsletter button {
-      padding: 10px 20px;
-      background: #ffb300;
-      border: none;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-  </style>
+  /* ===============================
+   Global Styles
+=============================== */
+:root {
+  --primary-color: #003366;    /* Deep Navy Blue */
+  --secondary-color: #FFD700;  /* Gold */
+  --accent-color: #228B22;     /* Leaf Green */
+  --neutral-color: #808080;    /* Grey */
+  --background-color: #f9f9f9; /* Light background */
+  --font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-family);
+  color: var(--primary-color);
+  background-color: var(--background-color);
+  line-height: 1.6;
+}
+
+/* ===============================
+   Header
+=============================== */
+header {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 20px 40px;
+  text-align: center;
+}
+
+header h1 {
+  font-size: 2.5rem;
+  margin: 0;
+}
+
+header p {
+  font-size: 1.2rem;
+  color: var(--secondary-color);
+}
+
+/* ===============================
+   Navigation
+=============================== */
+nav {
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 10px 0;
+}
+
+nav a {
+  color: var(--primary-color);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav a:hover {
+  color: var(--accent-color);
+}
+
+/* ===============================
+   Main Content
+=============================== */
+main {
+  max-width: 1200px;
+  margin: 40px auto;
+  padding: 0 20px;
+}
+
+section {
+  margin-bottom: 40px;
+}
+
+section h2 {
+  color: var(--primary-color);
+  border-bottom: 3px solid var(--secondary-color);
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+p {
+  color: var(--neutral-color);
+  font-size: 1.1rem;
+}
+
+/* ===============================
+   Buttons
+=============================== */
+.button {
+  display: inline-block;
+  padding: 12px 25px;
+  background-color: var(--accent-color);
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 6px;
+  transition: background 0.3s ease;
+}
+
+.button:hover {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+}
+
+/* ===============================
+   Footer
+=============================== */
+footer {
+  background-color: var(--primary-color);
+  color: white;
+  text-align: center;
+  padding: 20px 40px;
+  margin-top: 40px;
+}
+
+footer p {
+  color: var(--secondary-color);
+  margin: 0;
+}
+
+/* ===============================
+   Responsive
+=============================== */
+@media (max-width: 768px) {
+  header h1 {
+    font-size: 2rem;
+  }
+
+  nav {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  main {
+    margin: 20px;
+  }
+}
 </head>
 <body>
 
