--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       max-width: 120px;
       height: auto;
       margin-bottom: 20px;
+      background-color: #fff;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     }
     header h1 {
       font-size: 2.8em;
@@ -77,7 +81,10 @@
       max-width: 60px;
       height: auto;
       margin-bottom: 10px;
-      opacity: 0.7;
+      background-color: #fff;
+      padding: 8px;
+      border-radius: 8px;
+      opacity: 0.9;
     }
     /* Mobile responsiveness for logo */
     @media (max-width: 768px) {
