--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="TichaAfrica Logo" class="logo">
+    <img src="images/logo1.png" alt="TichaAfrica Logo" class="logo">
     <h1>TichaAfrica: Where African Teachers Lead the AI Revolution</h1>
     <p>Empowering educators to thrive in the digital age, shape the future, and inspire change.</p>
   </header>
