--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <a href="#" class="cta">Join the Movement</a>
   </section>
   <footer>
-    <img src="images/logo.png" alt="TichaAfrica Logo" class="footer-logo">
+    <img src="images/logo1.png" alt="TichaAfrica Logo" class="footer-logo">
     <br>
     &copy; 2025 TichaAfrica. All rights reserved.
   </footer>
