--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <header>
         <div class="container nav-container">
             <a href="#" class="logo">
-                <!-- REPLACE THIS WITH YOUR LOGO <img src="path/to/your-logo.png" alt="TichaAfrica Logo" class="logo-img"> -->
+                <img src="images/logo1.png" alt="TichaAfrica Logo" class="logo-img">
                 <span>TichaAfrica</span>
             </a>
             <ul class="nav-menu">
