--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             --color-secondary: #E9B44C; /* Golden Yellow - for secondary accents */
             --color-accent: #9A2617;   /* Terracotta Red - for strong calls to action */
             --color-light: #F8F4E3;    /* Cream - for light backgrounds */
-            --color-dark: #1A1D1A;     /* Near Black - for text */
+            --color-dark: #003366;     /* Near Black - for text */
             --color-gray: #5C5C5C;     /* Gray - for secondary text */
         }
 
@@ -309,7 +309,7 @@
     <header>
         <div class="container nav-container">
             <a href="#" class="logo">
-                <img src="images/logo1.png" alt="TichaAfrica Logo" class="logo-img">
+                <img src="images/logo.png" alt="TichaAfrica Logo" class="logo-img">
                 <span>TichaAfrica</span>
             </a>
             <ul class="nav-menu">
