--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             --color-primary: #2A5C3F;  /* Deep Green - for primary buttons and accents */
             --color-secondary: #E9B44C; /* Golden Yellow - for secondary accents */
             --color-accent: #9A2617;   /* Terracotta Red - for strong calls to action */
-            --color-light: #F8F4E3;    /* Cream - for light backgrounds */
-            --color-dark: #003366;     /* Near Black - for text */
+            --color-light: #003366;    /* Cream - for light backgrounds */
+            --color-dark: #1a1d1a;     /* Near Black - for text */
             --color-gray: #5C5C5C;     /* Gray - for secondary text */
         }
 
