--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     <section id="problem" class="section-light">
         <div class="container split-section">
             <div class="split-content">
-                <h2 class="section-title">Your Classroom, Your Reality, Your Power.</h2>
+                <h2 class="section-title">Our Classroom, Our Reality, Our Power.</h2>
                 <p>Foreign edtech tools see a classroom. They miss the community. They see a challenge. They miss the context. For too long, "solutions" have been imported, not built—prescribing generic fixes for uniquely African realities.</p>
                 <p><strong>TichaAfrica ends that disconnect.</strong></p>
                 <p>We're the first AI-powered platform co-created <em>with</em> you, not delivered <em>to</em> you. It's how we ensure every feature tackles your real challenges: overcrowded classrooms, scarce resources, and the need for culturally resonant teaching.</p>
@@ -635,9 +635,9 @@
                 </div>
                 <div class="footer-column">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-envelope"></i> info@ticha.africa</p>
-                    <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Lagos, Nigeria</p>
+                    <p><i class="fas fa-envelope"></i> contact@tichaafrica.com</p>
+                    <p><i class="fas fa-phone"></i> +234 8162039763</p>
+                    <p><i class="fas fa-map-marker-alt"></i>  Nigeria, West Africa</p>
                 </div>
             </div>
             <div class="copyright">
