--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     <!-- Navigation -->
     <nav>
         <div class="container nav-container">
-            <img src="https://i.ibb.co/4T2y1c2/logo.png" alt="TichaAfrica Logo" class="nav-logo">
+            <img src="images/logo.png" alt="TichaAfrica Logo" class="nav-logo">
             <ul class="nav-menu">
                 <li><a href="#problem">The Challenge</a></li>
                 <li><a href="#solution">Our Solution</a></li>
@@ -630,13 +630,13 @@
                 </div>
                 <div class="footer-column">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-envelope"></i> info@ticha.africa</p>
-                    <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Lagos, Nigeria</p>
+                    <p><i class="fas fa-envelope"></i> contact@tichaafrica.com</p>
+                    <p><i class="fas fa-phone"></i> +234 8162039763</p>
+                    <p><i class="fas fa-map-marker-alt"></i>  Nigeria, West Africa.</p>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 TichaAfrica. All rights reserved. Teach Smart. Lead Change.</p>
+                <p>&copy; 2025 TichaAfrica. All rights reserved. Teach Smart. Lead Change.</p>
             </div>
         </div>
     </footer>
