--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
       border-bottom: 2px solid var(--leaf);
       text-align: center;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-      color: var(--navy);
+    header img {
+      height: 60px;
     }
     nav {
       margin-top: 10px;
@@ -47,6 +45,10 @@
       color: var(--white);
       text-align: center;
       padding: 60px 20px;
+    }
+    .hero img {
+      max-width: 200px;
+      margin-bottom: 20px;
     }
     .hero h2 {
       font-size: 2.2rem;
@@ -98,7 +100,7 @@
 <body>
 
 <header>
-  <h1>TichaAfrica</h1>
+  <img src="images/logo.png" alt="TichaAfrica Logo">
   <nav>
     <a href="#why">Why</a>
     <a href="#alliance">Alliance</a>
@@ -107,6 +109,7 @@
 </header>
 
 <section class="hero">
+  <img src="images/hero.png" alt="TichaAfrica Hero">
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
   <p>Africa’s first mobile-first AI training platform built with teachers’ insights, for real classrooms.</p>
   <a href="#join" class="btn">Join the Founding Teacher Alliance</a>
@@ -144,9 +147,9 @@
   <p>Teachers, partners, policymakers—your role is critical.</p>
   <p><strong>Start here:</strong></p>
   <ul>
-    <li><a href="#">Fill the Insights Form</a></li>
-    <li><a href="#">Subscribe to Beyond the Blackboard</a></li>
-    <li><a href="#">Collaborate with Us</a></li>
+    <li><a href="https://tally.so/forms/3jrJG9/" target="_blank">Fill the Insights Form</a></li>
+    <li><a href="https://tichaafrica.substack.com/" target="_blank">Subscribe to Beyond the Blackboard</a></li>
+    <li><a href="mailto:contact@tichaafrica.com">Collaborate with Us</a></li>
   </ul>
 </section>
 
