--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </header>
 
 <section class="hero">
-  <img src="images/hero.png" alt="TichaAfrica Hero">
+  <img src="images/hero.jpg" alt="TichaAfrica Hero">
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
   <p>Africa’s first mobile-first AI training platform built with teachers’ insights, for real classrooms.</p>
   <a href="#join" class="btn">Join the Founding Teacher Alliance</a>
