--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <header>
   <a href="/">
-    <img src="images/logo.png" alt="TichaAfrica Logo">
+    <img src="images/logo1.png" alt="TichaAfrica Logo">
   </a>
   <nav>
     <a href="#why">Why</a>
