--- a/index.html
+++ b/index.html
@@ -98,6 +98,28 @@
       overflow: hidden;
     }
 
+    /* Animated dots background */
+    .hero::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background-image: radial-gradient(rgba(255,255,255,0.05) 2px, transparent 2px);
+      background-size: 60px 60px;
+      animation: floatDots 25s linear infinite;
+      z-index: 0;
+    }
+
+    @keyframes floatDots {
+      0% { transform: translate(0,0); }
+      50% { transform: translate(20px, -20px); }
+      100% { transform: translate(0,0); }
+    }
+
+    .hero h2, .hero p, .hero a, .hero img { position: relative; z-index: 1; }
+
     .hero h2 {
       font-size: clamp(2rem, 5vw, 3.5rem);
       margin-bottom: 20px;
@@ -278,56 +300,4 @@
 
 <section id="why">
   <h3>Why TichaAfrica Exists</h3>
-  <p>Across Africa, teachers create miracles every day—with limited tools, overcrowded classes, and little support. Yet, most AI tools are built far away, without their voices.</p>
-  <p>We believe teachers should lead the AI revolution in education.</p>
-</section>
-
-<section id="alliance">
-  <h3>Founding Teacher Alliance</h3>
-  <p>Be one of the first 200 teachers to shape Africa’s AI curriculum.</p>
-  <ul>
-    <li>Founding badge & recognition</li>
-    <li>Early access to training modules</li>
-    <li>Direct input into policies and tools</li>
-  </ul>
-  <a href="https://tally.so/forms/3jrJG9/" class="btn" target="_blank" rel="noopener noreferrer">Apply Now</a>
-</section>
-
-<section id="newsletter">
-  <h3>Stay Updated</h3>
-  <p>Join our newsletter: <a href="https://tichaafrica.substack.com/" target="_blank" rel="noopener noreferrer">Beyond the Blackboard</a></p>
-</section>
-
-<footer>
-  <p>Contact: <a href="mailto:contact@tichaafrica.com">contact@tichaafrica.com</a></p>
-  <p>© 2025 TichaAfrica – Human-First AI for Education</p>
-</footer>
-
-<script>
-  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-      e.preventDefault();
-      const target = document.querySelector(this.getAttribute('href'));
-      if(target) target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-    });
-  });
-
-  let lastScroll = 0;
-  window.addEventListener('scroll', () => {
-    const header = document.querySelector('header');
-    const currentScroll = window.pageYOffset;
-    if(currentScroll > 100) {
-      header.style.background = 'rgba(255, 255, 255, 0.95)';
-      header.style.backdropFilter = 'blur(10px)';
-    } else {
-      header.style.background = 'var(--white)';
-      header.style.backdropFilter = 'none';
-    }
-    lastScroll = currentScroll;
-  });
-
-  window.addEventListener('load', () => { document.body.style.opacity = '1'; });
-</script>
-
-</body>
-</html>
+  <p>Across Africa, teachers create miracles every day—with limited tools, overcrowded classes, and little support. Yet, most AI tools are
