--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
 
 <section class="hero">
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
-  <p>Africa’s first mobile-first AI training platform built with teachers’ insights, for real classrooms.</p>
-  <a href="https://tally.so/forms/3jrJG9/" class="btn">Fill the Insights Form</a>
+  <p>Africa’s first teacher-led mobile-first AI training platform built by teachers, for real classrooms.</p>
+  <a href="https://tally.so/forms/3jrJG9/" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
   <img src="images/hero.png" alt="TichaAfrica Hero">
 </section>
 
 <section id="why">
   <h3>Why TichaAfrica Exists</h3>
   <p>Across Africa, teachers create miracles every day—with limited tools, overcrowded classes, and little support. Yet, most AI tools are built far away, without their voices.</p>
-  <p>We believe teachers should lead the AI revolution in education.</p>
+  <p>We believe teachers should lead the AI transformation in African classrooms.</p>
 </section>
 
 <section id="alliance">
