--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <header>
   <a href="/">
-    <img src="images/logo.png" alt="TichaAfrica Logo">
+    <img src="images/logo1.png" alt="TichaAfrica Logo">
   </a>
   <nav>
     <a href="#why">Why</a>
@@ -98,7 +98,7 @@
 
 <section class="hero">
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
-  <p>Africa’s first teacher-led mobile-first AI training platform built by teachers, for real classrooms.</p>
+  <p>Africa’s first teacher-led mobile-first AI training platform built by African teachers, for real African classrooms.</p>
   <a href="https://tally.so/forms/3jrJG9/" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
   <img src="images/hero.png" alt="TichaAfrica Hero">
 </section>
@@ -106,7 +106,7 @@
 <section id="why">
   <h3>Why TichaAfrica Exists</h3>
   <p>Across Africa, teachers create miracles every day—with limited tools, overcrowded classes, and little support. Yet, most AI tools are built far away, without their voices.</p>
-  <p>We believe teachers should lead the AI transformation in African classrooms.</p>
+  <p>We believe teachers should lead the AI transformation, sweeping across the globe, in African classrooms.</p>
 </section>
 
 <section id="alliance">
@@ -122,7 +122,7 @@
 
 <section id="newsletter">
   <h3>Stay Updated</h3>
-  <p>Join our newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
+  <p>Join Beyond the Blackboard our weekly newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
 </section>
 
 <footer>
