--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <nav>
     <a href="#why">Why</a>
     <a href="#alliance">Alliance</a>
-    <a href="#join">Join</a>
+    <a href="#join">Join the Alliance</a>
   </nav>
 </header>
 
@@ -100,13 +100,13 @@
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
   <p>Africa’s first teacher-led mobile-first AI training platform built by African teachers, for real African classrooms.</p>
   <a href="https://tally.so/forms/3jrJG9/" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
-  <img src="images/hero.png" alt="TichaAfrica Hero">
+  <img src="images/hero.jpg" alt="TichaAfrica Hero">
 </section>
 
 <section id="why">
   <h3>Why TichaAfrica Exists</h3>
   <p>Across Africa, teachers create miracles every day—with limited tools, overcrowded classes, and little support. Yet, most AI tools are built far away, without their voices.</p>
-  <p>We believe teachers should lead the AI transformation, sweeping across the globe, in African classrooms.</p>
+  <p>We believe teachers should lead the AI transformation in education, sweeping across the globe, in African classrooms.</p>
 </section>
 
 <section id="alliance">
@@ -117,7 +117,7 @@
     <li>Early access to training modules</li>
     <li>Direct input into policies and tools</li>
   </ul>
-  <a href="https://tally.so/forms/3jrJG9/" class="btn">Apply Now</a>
+  <a href="https://tally.so/forms/3jrJG9/" class="btn">Become a TichaAfrica Ambassador</a>
 </section>
 
 <section id="newsletter">
