--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <nav>
     <a href="#why">Why</a>
     <a href="#alliance">Alliance</a>
-    <a href="#join">Join the Alliance</a>
+    <a href="#join">Join</a>
   </nav>
 </header>
 
@@ -100,7 +100,7 @@
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
   <p>Africa’s first teacher-led mobile-first AI training platform built by African teachers, for real African classrooms.</p>
   <a href="https://tally.so/forms/3jrJG9/" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
-  <img src="images/hero.jpg" alt="TichaAfrica Hero">
+  <img src="images/hero1.jpg" alt="TichaAfrica Hero">
 </section>
 
 <section id="why">
@@ -117,12 +117,12 @@
     <li>Early access to training modules</li>
     <li>Direct input into policies and tools</li>
   </ul>
-  <a href="https://tally.so/forms/3jrJG9/" class="btn">Become a TichaAfrica Ambassador</a>
+  <a href="https://tally.so/forms/3jrJG9/" class="btn">Join the Alliance</a>
 </section>
 
 <section id="newsletter">
   <h3>Stay Updated</h3>
-  <p>Join Beyond the Blackboard our weekly newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
+  <p>Join Beyond our weekly newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
 </section>
 
 <footer>
