--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
   <p>Africa’s first teacher-led mobile-first AI training platform built by African teachers, for real African classrooms.</p>
   <a href="https://tally.so/forms/3jrJG9/" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
-  <img src="images/hero1.jpg" alt="TichaAfrica Hero">
+  <img src="images/hero1.png" alt="TichaAfrica Hero">
 </section>
 
 <section id="why">
