--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TichaAfrica – Teachers Leading Africa’s AI Education</title>
+  <title>TichaAfrica – Teach Smart. Lead Change.</title>
   <meta name="description" content="TichaAfrica empowers teachers to lead Africa’s AI education revolution. Join the alliance shaping an inclusive, human-first future for learning." />
   <style>
     :root {
@@ -97,16 +96,16 @@
 </header>
 
 <section class="hero">
-  <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
-  <p>Africa’s first teacher-led mobile-first AI training platform built by African teachers, for real African classrooms.</p>
-  <a href="https://tally.so/forms/3jrJG9/" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
+  <h1>Teach Smart. Lead Change.</h1>
+  <p>We’re building Africa’s first teacher-led, mobile-first AI training platform — powered by teachers, for African classrooms.</p>
+  <a href="https://tally.so/forms/3jrJG9/" class="btn">I’m a Teacher — I’m Ready to Lead the Change</a>
   <img src="images/hero4.jpg" alt="TichaAfrica Hero">
 </section>
 
 <section id="why">
   <h3>Why TichaAfrica Exists</h3>
-  <p>Across Africa, teachers create miracles every day—with limited tools, overcrowded classes, and little support. Yet, most AI tools are built far away, without their voices.</p>
-  <p>We believe teachers should lead the AI transformation in education, sweeping across the globe, in African classrooms.</p>
+  <p>Across Africa, teachers perform daily miracles — shaping young minds with too few tools, overcrowded classes, and limited support. Yet most AI tools are designed far away, without their voices at the table.</p>
+  <p>TichaAfrica exists to change that. We believe the future of education must be <strong>shaped by teachers, not just for them</strong>. Guided by <strong>UNESCO’s AI Competency Framework for Teachers</strong> and the <strong>African Union Continental AI Strategy</strong>, we ensure global standards meet African realities — with teachers at the centre of innovation.</p>
 </section>
 
 <section id="alliance">
@@ -122,7 +121,7 @@
 
 <section id="newsletter">
   <h3>Stay Updated</h3>
-  <p>Join Beyond our weekly newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
+  <p>Subscribe to our weekly newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
 </section>
 
 <footer>
