--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
       gap: 15px;
     }
     header img {
-      height: 70px; /* Increased size */
+      height: 70px; /* Logo size */
     }
     .slogan {
-      font-size: 1.1rem;
-      font-weight: bold;
-      color: var(--leaf);
-      max-width: 180px;
+      font-size: 0.95rem; /* Reduced font size */
+      font-style: italic; /* Italicized */
+      font-weight: normal;
+      color: var(--gold); /* Highlight colour */
+      max-width: 160px;
       line-height: 1.2;
     }
     nav a {
