--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <a href="/">
       <img src="images/logo1.png" alt="TichaAfrica Logo">
     </a>
-    <div class="slogan">Teach Smart.<br>Lead Change.</div>
+    <div class="slogan">Teach Smart.Lead Change.</div>
   </div>
   <nav>
     <a href="#why">Why</a>
